# alrust

./: .gitignore  Cargo.toml  config.yaml  diesel.toml  experiment.yaml  readme.md
.github/workflows/: rust.yml
data_updates/: skills.json
genetic/: Cargo.toml
genetic/src/: algorithm.rs  alias.rs  error.rs  genetic.rs  individual.rs  lib.rs  mask.rs  op.rs  paretto.rs  population.rs  printer.rs
genetic/src/moga/: algorithm.rs  genetic.rs  mod.rs  population.rs
genetic/src/operators/: mod.rs
genetic/src/operators/crossover/: mod.rs  ppx.rs
genetic/src/operators/mutate/: combined.rs  mod.rs
genetic/src/operators/reinsert/: elitist.rs  mod.rs
genetic/src/operators/select/: mod.rs  tournament.rs
geneticalchemy/: Cargo.toml
geneticalchemy/src/: algorithm.rs  builder.rs  eexpr.rs  fitness.rs  gene.rs  genetic.rs  genome.rs  incubator.rs  lib.rs  mutate.rs  scenario.rs
grimoire/: Cargo.toml
grimoire-cli/: Cargo.toml
grimoire-cli/src/: experiment.rs  main.rs
grimoire-cli/src/commands/: mod.rs
grimoire-cli/src/commands/mix/: experiment.rs  mod.rs
grimoire-index/: Cargo.toml
grimoire-index/src/: character.rs  grimoire.rs  ingredient.rs  lib.rs  skill.rs
grimoire-index/src/unbound/: character.rs  grimoire.rs  ingredient.rs  mod.rs  skill.rs
grimoire-serde/: Cargo.toml
grimoire-serde/src/: grimoirupdate.rs  history.rs  lib.rs  mix.rs  potion.rs  theoretical.rs
grimoire-serde/src/grimoire/: character.rs  ingredient.rs  mod.rs  skill.rs
grimoire-serde/src/modify/: character.rs  ingredient.rs  mod.rs  skill.rs
grimoire-sqlite/: Cargo.toml
grimoire-sqlite/src/: error.rs  ingredient.rs  lib.rs  lore.rs  schema.rs
grimoire-tauri/: Cargo.toml
grimoire-tauri/src/: main.rs
grimoire-yew/: Cargo.toml  index.html
grimoire-yew/src/: main.rs
grimoire/src/: data.rs  error.rs  lib.rs  mix.rs  optimized.rs  serializable.rs  sqlite.rs  theoretical.rs  types.rs
grimoire2/: Cargo.toml
grimoire2/src/: effect.rs  error.rs  lib.rs  modifier.rs  modifiermap.rs  theoretical.rs
grimoire2/src/grimoire/: character.rs  ingredient.rs  mod.rs  skill.rs
grimoire2/src/modify/: character.rs  command.rs  ingredient.rs  mod.rs  skill.rs
grimoire2/src/standalone/: ingredient.rs  ingredientmap.rs  mix.rs  mod.rs
migrations/2022-12-15-114915_initial/: down.sql  up.sql
src/: app.rs  characters.rs  error.rs  events.rs  experiment.rs  fs.rs  global.rs  grimoire_state.rs  grimoiredb.rs  grimoireeditor.rs  guess.rs  id.rs  main.rs  mix.rs  publicstate.rs  repl.rs  schema.rs  serializable.rs  theoretical.rs  top_panel.rs  toppanel.rs  types.rs  update.rs  wishes.rs
src/editor/: character.rs  characters.rs  create.rs  edit.rs  editor.rs  mod.rs
src/editor/character/: clade.rs  create_clade_button.rs  mod.rs  skills.rs
src/editor/characters/: create.rs  edit.rs  mod.rs  table.rs
src/editors/: mod.rs
src/editors/character/: clade.rs  clades.rs  editor.rs  mod.rs  window.rs
src/editors/grimoire/: editor.rs  mod.rs
src/editors/grimoire/characters/: editor.rs
src/explore/: mod.rs
src/explore/list/: characters.rs  ingredients.rs  mod.rs  skills.rs
src/explore/view/: character.rs  ingredient.rs  mod.rs  skill.rs
src/grimoire/: character.rs  characterskill.rs  grimoire.rs  ingredient.rs  mod.rs  skill.rs
src/models/: ingredient.rs  lore.rs  mod.rs  player_character.rs  player_character_lore.rs
src/old/editor/: edit.rs  editor.rs  mod.rs
src/old/editor/character/: clade.rs  clades.rs  create_clade_button.rs  mod.rs  skill.rs  skills.rs  windows.rs
src/old/editor/characters/: edit.rs  mod.rs
src/optimization/: build.rs  config.rs  eexpr.rs  error.rs  mod.rs  print.rs
src/optimize/: build.rs  config.rs  eexpr.rs  error.rs  mod.rs  print.rs
src/optimize2/: build.rs  config.rs  eexpr.rs  error.rs  message.rs  mod.rs  printer.rs  repl.rs
src/widget/: closeablewindow.rs  mod.rs  okcancelwindow.rs  setstringwindow.rs
src/widgets/: addbutton.rs  mod.rs  rename.rs
