[package]
name = "alrust2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
eframe = "0.20.1"
egui_extras = "0.20.0"
serde_json = "1.0.91"
rfd = "0.10.0"
thiserror = "1.0.38"
error-stack = "0.2.4"
tracing = "0.1.37"
indexmap = { version = "1.9.2", features=["serde-1"] }

genetic = { path="genetic" }
geneticalchemy = { path="geneticalchemy" }
grimoire2 = { path="grimoire2" }
grimoire-sqlite = { path="grimoire-sqlite" }


[workspace]
members = [
    'genetic',
    'geneticalchemy',
    'grimoire-sqlite',
]


[features]
json = []