[package]
name = "alrust2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
thiserror = "1.0.38"
error-stack = "0.2.4"
tracing = { version="0.1.37", features=["log", "log-always"]}
tracing-subscriber = {version = "0.3.16", features=["tracing-log", "env-filter"]}
indexmap = { version = "1.9.2", features=["serde-1"] }

genetic = { path="genetic" }
geneticalchemy = { path="geneticalchemy" }
grimoire2 = { path="grimoire2" }
grimoire-serde = { version = "0.1.0", path = "grimoire-serde" }
clap = { version = "4.0.32", features = ["env"] }
serde_yaml = "0.9.16"
serde = { version = "1.0.151", features = ["derive"] }
evalexpr = { version = "8.1.0", features = ["serde_support"] }
chrono = "0.4.23"
rand = "0.8.5"
dotenv = "0.15.0"
ctrlc = "3.2.4"
crossterm = "0.25.0"


[workspace]
members = [
    'genetic',
    'geneticalchemy',
    'grimoire-serde',
]


[features]
json = []
