[package]
name = "genetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.149", features = ["derive"]}
thiserror = "1.0.37"
error-stack = "0.2.4"
ordered-float = "3.4.0"
rand = {version="0.8.5", features=["small_rng"]}


[dev-dependencies]
float-cmp = "0.9.0"
