[package]
name = "geneticalchemy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.4.0"
rand = {version="0.8.5", features=["small_rng"]}

grimoire = { path="../grimoire" }
genetic = { path="../genetic" }