[package]
name = "grimoire-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
serde = {version="1.0.151", features=["derive"]}
serde_json = "1.0.91"
serde_yaml = "0.9.16"

thiserror = "1.0.38"
error-stack = "0.2.4"

genetic = { path="../genetic" }
geneticalchemy = { path="../geneticalchemy" }
grimoire2 = { path="../grimoire2" }
grimoire-sqlite = { path="../grimoire-sqlite" }
grimoire-serde = { path="../grimoire-serde" }