[package]
name = "grimoire-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.149", features = ["derive"]}
serde_derive = "1.0.151"

grimoire2 = { path="../grimoire2" }

[dev-dependencies]
serde_yaml = "0.9.14"