[package]
name = "grimoire-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version="1.0.37" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
diesel = {version = "2.0.2", features = ["sqlite"]}
diesel_migrations = "2.0.0"
indexmap_192 = { version = "1.9.2", features=["serde-1"], package="indexmap" }


grimoire2 = { path="../grimoire2" }


[dev-dependencies]
maplit = "1.0.2"