[package]
name = "grimoire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.4.1"
error-stack = "0.2.4"
strum = "0.24.1"
strum_macros = "0.24.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }

[dev-dependencies]
float-cmp = "0.9.0"