[package]
name = "grimoire2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.37"
serde = { version = "1.0.151", features = ["derive"] }
derive_more = "0.99.17"

[dev-dependencies]
float-cmp = "0.9.0"
maplit = "1.0.2"